--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: Sugirdha V
-logo: /assets/img/logo.png
-description: My minimalist portfolio.
+title: Sugirdha
+logo: /assets/img/profile.png
+description: App Developer | Lifelong Learning Enthusiast
