--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ plugins:
 - jekyll-remote-theme
 
 title: Sugirdha
-logo: /assets/img/profile.png
+logo: /assets/img/profile.jpg
 description: App Developer | Lifelong Learning Enthusiast
