--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ plugins:
 title: Sugirdha
 logo: /assets/img/profile.jpg
 description: App Developer | Lifelong Learning Enthusiast
+
+linkedin_url: "https://www.linkedin.com/in/Sugirdha/"
