--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ description: App Developer | Lifelong Learning Enthusiast
 
 linkedin_url: "https://www.linkedin.com/in/Sugirdha/"
 about: "/about"
+
+excerpt_separator: <!--more-->
