--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ plugins:
 
 title: Sugirdha
 logo: /assets/img/profile.jpg
-description: App Developer | Lifelong Learning Enthusiast
+description: App Developer and Lifelong Learning Enthusiast
 
 linkedin_url: "https://www.linkedin.com/in/Sugirdha/"
 about: "/about"
