--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,6 @@ description: App Developer and Lifelong Learning Enthusiast
 
 linkedin_url: "https://www.linkedin.com/in/Sugirdha/"
 about: "/about"
+tags_page: "/postbytags"
 
 excerpt_separator: <!--more-->
