--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,9 @@ logo: /assets/img/profile.jpg
 description: App Developer and Lifelong Learning Enthusiast
 
 linkedin_url: "https://www.linkedin.com/in/Sugirdha/"
+github_url: "https://github.com/Sugirdha"
 about: "/about"
 tags_page: "/postbytags"
+favicon_img: "/assets/img/favicon.jpg"
 
 excerpt_separator: <!--more-->
