change font sizes from theme

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ excerpt_separator: <!--more-->
 
 #################################################################################
 # --------------------------- Theme related changes --------------------------- #
-# --------------------- Theme: Sugirdha/beautiful-jekyll ---------------------- #
+# --------------------- Theme: beautiful-jekyll ---------------------- #
 #################################################################################
 
 navbar-links:
